--- a/basic/basictools/src/pages/Contato/Contato.module.css
+++ b/basic/basictools/src/pages/Contato/Contato.module.css
@@ -1,54 +1,32 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-  }
-  
-  .form {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 40px;
-    max-width: 600px;
-    width: 100%;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-  }
-  
-  .form h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 35px;
-  }
-  
-  .group {
-    margin-bottom: 20px;
-  }
-  
-  .group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  .group input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #7E587E;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #C8A2C8;
-  }
-  
+input[type="text"],
+input[type="email"],
+textarea {
+  font-weight: bolder;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #999;
+  padding: .8em 0;
+  background-color: transparent;
+  margin-top: 10px;
+}
+textarea {
+  height: 100px;
+}
+input[type="submit"] {
+  width: 30%;
+  padding: 10px;
+  background-color: #2fa062;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-left: 180px;
+  margin-top: 30px;
+  margin-bottom: 70px;
+}
+input[type="submit"]:hover {
+  background-color: #4a9a6e;
+}
+
