Cores no botoes

--- a/basic/basictools/src/App.css
+++ b/basic/basictools/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .faixa-matematica {
-    background-color: hsl(47, 100%, 60%);
+    background-color: #FFD233;
     color: #795f01;
     padding: 100px;
 }
