--- a/basic/basictools/src/components/Footer/Footer.module.css
+++ b/basic/basictools/src/components/Footer/Footer.module.css
@@ -1,4 +1,14 @@
 .footer {
-  background-color: #709BC3;
-  
+  background-color: #709BC3; 
  }
+
+ .paragrafo{
+  font-family: 'Lucida Sans Unicode',  Verdana, sans-serif;
+  font-size: 20px;
+  text-align: 20px;
+  }
+
+  .redessociais{
+    font-size: 20px;
+    text-align: 20px;
+   }
