--- a/basic/basictools/src/pages/Home/Home.module.css
+++ b/basic/basictools/src/pages/Home/Home.module.css
@@ -1,45 +1,7 @@
-/* bainner home */
-.frase1 {
-  margin-top: 20px;
-margin-block: 50px;
-  text-align: center;
-  color: #ffffff;
-  margin-left: 10px;
-  font-family:  'Lucida Sans Unicode',  Verdana, sans-serif;
+.bgHome {
+  background-color: #5b93c8;
 }
-.frase2 {
- font-size: 170%;
-  text-align: center;
-  font-family:  'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight:bolder;
-}
-
-
-.imgFamilia {
-width: 400px;
-margin-left: 170px;
-margin-top: 33px;
-
-}
-
-.bgBainner {
-  background-color: #709BC3;
-  padding-top: 30px;
-  height: 460px;
-}
-
-/*  */
-.mural {
-  background-color: #D6E2F0;
-}
-
-
-.bgCard {
-  background-color: #416e97;
-
-}
-
-/* ButtonGroup.css */
+/* Cards Categoria - Botoes dos cards */
 .btAlfabetizacao {
   background-color: #184ec2;
   color: #ffffff;
@@ -71,12 +33,11 @@ margin-top: 33px;
   opacity: 80%;
 }
 
-
 .btPortugues {
   background-color: #7c13df;
   color: white;
   margin-top: 19px;
-  border-radius: 100px;  
+  border-radius: 100px;
   width: 100%;
   padding: 10px;
   border: none;
@@ -119,27 +80,48 @@ margin-top: 33px;
   opacity: 80%;
 }
 
+/*mural na home*/
+.mural {
+  background-color: #D6E2F0;
+  padding-bottom: 30px;
+}
 
-
-.bgContainer {
-  background-color: #709BC3;
+.tamanhoImg {
+  margin: auto;
   padding-top: 10px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
+  width: 100%;
+  height: 100%;
 }
 
-.textContainer {
-  border-radius: 5px;
-  color: #ffff;
-  text-align: center;
-
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif sans-serif;
+.tamanhoCard {
+  border-radius: 10px;
+  border: 1px solid #ffffff;
+  margin: 5px;
+  width: 100%;
+  max-width: 300px;
+  background-color: #ffffff;
 }
 
-@media (max-width: 768px) {
-  .imageContainer {
-    display: none;
-    /* Oculta a imagem em dispositivos móveis */
-  }
+.btMural {
+  background-color: #5b93c8;
+  margin-top: 19px;
+  border-radius: 100px;
+  width: 12%;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
 }
 
+.btMural:hover {
+  background-color: #709BC3;
+  opacity: 80%;
+  color: #ffffff;
+}
 
+/*sobre nós na home*/
+.fraseSobre{
+  text-align: justify;
+
+}
