--- a/basic/basictools/src/pages/Contato/Contato.module.css
+++ b/basic/basictools/src/pages/Contato/Contato.module.css
@@ -1,33 +1,9 @@
-input[type="text"],
-input[type="email"],
-input[type="password"],
-textarea {
-  font-weight: bolder;
+.contato {
+  background-color: #e1eaf4;
+padding: 70px;
+}
+.form {
   width: 100%;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 1px solid #999;
-  padding: .8em 0;
-  background-color: transparent;
-  margin-top: 10px;
+  justify-content: center;
+  padding: 0px 50px 0px 50px;
 }
-textarea {
-  height: 100px;
-}
-input[type="submit"] {
-  width: 30%;
-  padding: 10px;
-  background-color: #2fa062;
-  color: #fff;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  margin-left: 180px;
-  margin-top: 30px;
-  margin-bottom: 70px;
-}
-input[type="submit"]:hover {
-  background-color: #4a9a6e;
-}
-
