--- a/basic/basictools/src/components/UserProfile/UserProfile.module.css
+++ b/basic/basictools/src/components/UserProfile/UserProfile.module.css
@@ -6,19 +6,20 @@
 }
 
 .userAvatar {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 
 .userAvatar:hover {
   opacity: 70%;
+  cursor: pointer;
 }
 
 .dropdownMenu {
   position: absolute;
   top: 55px; 
-  right: -20px;
+  right: -25px;
   background-color: #333;
   border: 1px solid #444;
   border-radius: 8px;
