--- a/basic/basictools/src/index.css
+++ b/basic/basictools/src/index.css
@@ -74,20 +74,19 @@
 .basic-menu-item {
   background: #EEEEEE;
   border-radius: 100%;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   position: absolute;
   color: #FFFFFF;
   text-align: center;
-  line-height: 50px;
+  line-height: 40px;
 }
 
 .basic-menu {
   margin: auto;
   position: absolute;
-  top: 20px;
-  left: 0%;
-  right: 0%;
+  top: 36px;
+  right: 140px;
   width: 80px; 
   height: 80px;
   text-align: center;
@@ -96,44 +95,12 @@
 }
 
 .basic-menu-item:hover {
-  background: #EEEEEE;
+  opacity: 70%;
 }
-
 
 .blue {
   background-color: #669AE1;
-  box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.10);
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
-  left: 80px;
+  left: 90px;
 }
-
-.blue:hover {
-  color: #669AE1;
-  text-shadow: none;
-}
-
-.green {
-  background-color: #70CC72;
-  box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
-  left: 0px;
-}
-
-.green:hover {
-  color: #70CC72;
-  text-shadow: none;
-}
-
-.purple {
-  background-color: #C49CDE;
-  box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
-  left: -80px;
-}
-
-.purple:hover {
-  color: #C49CDE;
-  text-shadow: none;
-}
-
-
