--- a/basic/basictools/src/pages/Contato/Contato.module.css
+++ b/basic/basictools/src/pages/Contato/Contato.module.css
@@ -1,9 +1,16 @@
 .contato {
   background-color: #e1eaf4;
-padding: 70px;
+  padding: 70px;
 }
 .form {
   width: 100%;
   justify-content: center;
   padding: 0px 50px 0px 50px;
+}
+
+
+
+.custom-card {
+  background-color: red;
+  color: red;
 }
