--- a/basic/basictools/src/pages/Mural/Mural.module.css
+++ b/basic/basictools/src/pages/Mural/Mural.module.css
@@ -49,3 +49,20 @@
         max-width: 100%;
     }
 }
+
+.imgMural {
+    width: 200px;
+    margin: 10px 10px 10px 10px;
+    border: 8px solid rgb(255, 255, 255);
+    border-radius: 10%;
+}
+
+.mural {
+    background-image: url("/src/assets/img/fundo_mural.jpg");
+    border: 15px solid transparent;
+    padding: 15px;
+    border-image-source: url("/src/assets/img/borda_mural.png");  
+    border-image-slice: 30;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
