--- a/basic/basictools/src/pages/Home/Home.module.css
+++ b/basic/basictools/src/pages/Home/Home.module.css
@@ -119,6 +119,14 @@
   opacity: 80%;
   color: #ffffff;
 }
+.sobre{
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 40%;
+  height: 40%;
+}
+
 
 /*sobre nós na home*/
 .fraseSobre{
