Criação de Dashboard de Administração

--- a/basic/basictools/src/App.css
+++ b/basic/basictools/src/App.css
@@ -52,3 +52,9 @@
     color: #f1f3f5;
     padding: 50px;
 }
+
+.faixa-dashboard {
+    background-color: #90598e;
+    color: #e7cce1;
+    padding: 50px;
+}
