--- a/basic/basictools/src/pages/Login/Login.module.css
+++ b/basic/basictools/src/pages/Login/Login.module.css
@@ -55,3 +55,23 @@
     justify-content: center;
     padding: 0px 50px 0px 50px;
   }
+
+
+
+/* Login CoreUI */
+.loginSocial{
+  margin-top: 40px;
+}
+  .google {
+    margin: auto;
+    display: block;
+    width: 50px;
+    border: none;
+    border-radius: 100%;
+    background-color: #f0efef;
+    
+  }
+
+  .google:hover {
+    background-color: #ebebeb;
+  }
