--- a/basic/basictools/src/App.css
+++ b/basic/basictools/src/App.css
@@ -58,3 +58,9 @@
     color: #e7cce1;
     padding: 50px;
 }
+
+.faixa-ajuda {
+    background-color: #75acff;
+    color: #cfe2ff;
+    padding: 50px;
+}
