--- a/basic/basictools/src/pages/Contato/Contato.module.css
+++ b/basic/basictools/src/pages/Contato/Contato.module.css
@@ -1,34 +1,15 @@
-.contato {
-  background-color: #e1eaf4;
-  padding: 70px;
-}
-.form {
-  width: 100%;
-  justify-content: center;
-  padding: 0px 50px 0px 50px;
-}
-
-
-
-.custom-card {
-  background-color: red;
-  color: red;
+.btContato {
+   background-color: #5b93c8;
+   margin-top: 15px;
+   margin-bottom: 30px;
+   border-radius: 100px;
+   padding: 10px;
+   border: none;
+   cursor: pointer;
+   color: #ffffff;
 }
 
-.btenviar {
-  background-color: #5b93c8;
- margin-bottom: 30px;
- margin-top: 40px;
-  border-radius: 100px;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  color: #ffffff;
-}
-
-
-
-.btenviar:hover {
+.btContato:hover{
   background-color: #709BC3;
   opacity: 80%;
   color: #ffffff;
