--- a/basic/basictools/src/App.css
+++ b/basic/basictools/src/App.css
@@ -64,3 +64,9 @@
     color: #cfe2ff;
     padding: 50px;
 }
+
+.faixa-register {
+    background-color: #75acff;
+    color: #cfe2ff;
+    padding: 50px;
+}
