Validações no cadastro de usuários

--- a/basic/basictools/src/pages/Register/register.module.css
+++ b/basic/basictools/src/pages/Register/register.module.css
@@ -19,7 +19,8 @@
   /* Error message styles */
   .error {
     color: red;
+    text-align: center;
+    font-style: italic;
     margin-top: 10px;
-    font-size: 14px;
   }
-  
+
